--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,7 +9,9 @@
 // Utilities
 @forward 'utilities/animations';
 @forward 'utilities/colors';
+@forward 'utilities/display';
 @forward 'utilities/position';
+@forward 'utilities/responsive';
 @forward 'utilities/shadows';
 @forward 'utilities/spacing';
 @forward 'utilities/typography';
