--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -69,9 +69,20 @@ select {
 }
 
 // Remove list styles
-ul[role='list'],
-ol[role='list'] {
+ul,
+ol {
   list-style: none;
+  margin: 0;
+  padding: 0;
+  // Modern properties
+  padding-inline-start: 0;  // Replaces padding-left
+  margin-block: 0;          // Replaces margin-top/bottom
+}
+
+li {
+  margin: 0;
+  padding: 0;
+  margin-block: 0;
 }
 
 // Set core root defaults
