hamburger.scss created

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,6 +10,7 @@
 @forward 'utilities/animations';
 @forward 'utilities/colors';
 @forward 'utilities/display';
+@forward 'utilities/hamburger';
 @forward 'utilities/position';
 @forward 'utilities/responsive';
 @forward 'utilities/shadows';
