--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -51,13 +51,18 @@
     border-color: var(--primary);
     box-shadow: 0 0 0 4px rgba(var(--primary-rgb), 0.1);
   }
-  
-  &:not(:placeholder-shown) + label {
+}
+
+
+// Handle input with value or placeholder
+.form-group {
+  &:has(input:not(:placeholder-shown)) > label.form-label,
+  &:has(input:focus) > label.form-label {
     @include form-label-float;
   }
-  
-  &:focus + label {
-    @include form-label-float;
+
+  // Change label color if input is focused
+  &:has(input:focus) > label {
     color: var(--primary);
   }
 }
@@ -90,7 +95,7 @@
 }
 
 // Checkbox & Radio Mixins
-@mixin form-check {
+@mixin form-selection {
   position: relative;
   display: inline-flex;
   align-items: center;
@@ -98,20 +103,33 @@
   user-select: none;
 }
 
-@mixin form-check-input {
+@mixin form-selection-input {
+  &[type="checkbox"]{
+    border-radius: 0.25rem;
+  }
+  &[type="radio"]{
+    border-radius: 20rem;
+  }
   appearance: none;
   width: 1.25rem;
   height: 1.25rem;
   border: 2px solid var(--border-color);
-  border-radius: 0.25rem;
   margin-right: 0.5rem;
   cursor: pointer;
   
   &:checked {
-    background-color: var(--primary);
-    border-color: var(--primary);
+    background-color: var(--primary); border-color: var(--primary);
+    @each $name, $color in $colors { 
+      &.#{$name} {background-color: Theme.theme-color($name); border-color: Theme.theme-color($name);}
+    }
     background-image: url("data:image/svg+xml,..."); // todo: colored arrow svg
   }
+}
+
+// Input Sizes
+@mixin input-size($size) {
+  font-size: map.get($font-sizes, $size);
+  padding: map.get($padding-map, $size);
 }
 
 // Classes
@@ -120,19 +138,35 @@
 .form-label { @include form-label; }
 .form-input { @include form-input; }
 .form-select { @include form-select; }
-.form-check { @include form-check; }
-.form-check-input { @include form-check-input; }
+.form-check, .form-radio { @include form-selection; }
+.form-check-input, .form-radio-input { @include form-selection-input; }
 
 // Validation Classes
 .is-valid { @include form-valid; }
 .is-invalid { @include form-invalid; }
 
-// Sizes
-@for $i from 0 through 5 {
-  .form-input-#{$i} {
-    @include form-input;
-    padding: $i;
-  }
+
+small{
+  font-size: 0.875rem;
+  position: absolute;
+  right: 20px;
+  top: -10px;
+  background: #f8f9fa;
+  padding: 0 10px;
+}
+
+// Base Input Class
+.form-input, .form-select {
+  @include input-size('md'); // Default size
+
+  // Sizes
+  &.xs { @include input-size('xs'); }
+  &.sm { @include input-size('sm'); }
+  &.md { @include input-size('md'); }
+  &.lg { @include input-size('lg'); }
+  &.xl { @include input-size('xl'); }
+  &.xxl { @include input-size('2xl'); }
+  &.xxxl { @include input-size('3xl'); }
 }
 
 // Dark Mode Support
