--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -26,6 +26,7 @@ dd {
 // Set core body defaults
 body {
   min-height: 100vh;
+  min-height: 100dvh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
