--- a/src/styles/utilities/_spacing.scss
+++ b/src/styles/utilities/_spacing.scss
@@ -1,5 +1,3 @@
-// _spacing.scss
-
 @use 'sass:math';
 @use './variables' as *; 
 
@@ -22,6 +20,27 @@
 @mixin mb($val) { $val: if($val==0, $val, $val + px); margin-bottom: $val !important; }
 @mixin ml($val) { $val: if($val==0, $val, $val + px); margin-left: $val !important; }
 
+// Auto margin utilities
+@mixin ml-auto { margin-left: auto; }
+@mixin mr-auto { margin-right: auto; }
+@mixin mx-auto { @include ml-auto; @include mr-auto; }
+
+// Spacing map
+@mixin space-y($i) { & > * + * { margin-top: if($i == 0, 0, $i + px); } }
+@mixin space-x($i) { & > * + * { margin-left: if($i == 0, 0, $i + px); } }
+
+
+// Gap Mixins
+@mixin gap($value) { gap: if($value == 0, $value, $value + px); }
+@mixin gap-x($value) { column-gap: if($value == 0, $value, $value + px); }
+@mixin gap-y($value) { row-gap: if($value == 0, $value, $value + px); }
+
+.mx-auto { @include mx-auto; }
+.ml-auto { @include ml-auto; }
+.mr-auto { @include mr-auto; }
+
+// Gap Classes
+.gap-auto { gap: auto; }
 
 // Generate utilities from spacing map
 @each $i in $spacings {
@@ -42,13 +61,25 @@
     .mr-#{$i} { @include mr($i); }
     .mb-#{$i} { @include mb($i); }
     .ml-#{$i} { @include ml($i); }
-    // .gap-#{$key} { gap: $value; }
+    
+    // Gap classes
+    .gap-#{$i} { @include gap($i); }
+    .gap-x-#{$i} { @include gap-x($i); }
+    .gap-y-#{$i} { @include gap-y($i); }
+
+    // Space classes
+    .space-x-#{$i} { @include space-x($i); }
+    .space-y-#{$i} { @include space-y($i); }
 }
 
 
 // Responsive Position Classes
 @each $breakpoint, $width in $breakpoints {
     @media (min-width: $width) {
+        .mx-auto\@#{$breakpoint} { @include mx-auto; }
+        .ml-auto\@#{$breakpoint} { @include ml-auto; }
+        .mr-auto\@#{$breakpoint} { @include mr-auto; }
+
         // Generate utilities from spacing map
         @each $i in $spacings {
             // Padding classes
@@ -68,52 +99,15 @@
             .mr-#{$i}\@#{$breakpoint} { @include mr($i); }
             .mb-#{$i}\@#{$breakpoint} { @include mb($i); }
             .ml-#{$i}\@#{$breakpoint} { @include ml($i); }
+
+            .gap-#{$i}\@#{$breakpoint} { gap: $i; }
+            .gap-x-#{$i}\@#{$breakpoint} { column-gap: $i; }
+            .gap-y-#{$i}\@#{$breakpoint} { row-gap: $i; }
+      
+            
+            // Space classes
+            .space-x-#{$i}\@#{$breakpoint} { @include space-x($i); }
+            .space-y-#{$i}\@#{$breakpoint} { @include space-y($i); }
         }
     }
-}
-
-// Auto margin utilities
-@mixin ml-auto { margin-left: auto; }
-@mixin mr-auto { margin-right: auto; }
-@mixin mx-auto { @include ml-auto; @include mr-auto; }
-
-.mx-auto { @include mx-auto; }
-
-
-.ml-auto { @include ml-auto; }
-.mr-auto { @include mr-auto; }
-
-
-
-// Gap Mixins
-@mixin gap($value) {
-    gap: if($value == 0, $value, $value + px);
-}
-
-@mixin gap-x($value) {
-    column-gap: if($value == 0, $value, $value + px);
-}
-
-@mixin gap-y($value) {
-    row-gap: if($value == 0, $value, $value + px);
-}
-
-// Gap Classes
-.gap-auto { gap: auto; }
-
-@each $i in $spacings {
-    .gap-#{$i} { @include gap($i); }
-    .gap-x-#{$i} { @include gap-x($i); }
-    .gap-y-#{$i} { @include gap-y($i); }
-}
-
-// Responsive Gap Classes
-@each $breakpoint, $width in $breakpoints {
-  @media (min-width: $width) {
-    @each $i in $spacings {
-      .gap-#{$i}\@#{$breakpoint} { gap: $i; }
-      .gap-x-#{$i}\@#{$breakpoint} { column-gap: $i; }
-      .gap-y-#{$i}\@#{$breakpoint} { row-gap: $i; }
-    }
-  }
 }
