--- a/src/styles/utilities/_variables.scss
+++ b/src/styles/utilities/_variables.scss
@@ -1,7 +1,7 @@
 // Global variables that might be used across different modules
-$enable-dark-mode: true;
-$enable-rtl: false;
-$enable-reduced-motion: true;
+$enable-dark-mode: true !default;
+$enable-rtl: true !default;;
+$enable-reduced-motion: true !default;;
 
 $column-count: 12 !default;
 
@@ -33,7 +33,7 @@ $breakpoints: (
   'lg': 1024px,
   'xl': 1280px,
   'xxl': 1536px, 
-);
+) !default;
 
 // Container max-widths
 $container-max-widths: (
@@ -43,7 +43,7 @@ $container-max-widths: (
   'lg': 960px,
   'xl': 1140px,
   'xxl': 1320px,
-);
+) !default;
 
 // _variables.scss
 $font-sizes: (
@@ -55,8 +55,8 @@ $font-sizes: (
   '2xl': 1.75rem, // 28px
   '3xl': 2rem,    // 32px
   '4xl': 2.5rem   // 40px
-);
-
+) !default;
+ 
 $padding-map: (
   'xs': 0.25rem 0.5rem,
   'sm': 0.375rem 0.75rem,
@@ -65,13 +65,13 @@ $padding-map: (
   'xl': 1rem 2rem,
   '2xl': 1.25rem 2.5rem,
   '3xl': 1.5rem 3rem,
-  '4xl': 2rem 4rem
-);
+  '4xl': 2rem 4rem, 
+) !default;
  
 $spacings: (
   0,1,2,3,4,5,10,15,20,25,30,35,40,45,50,60,70,80,90,100,125,150,175,200,250,300,350,400,450,500
-);
+) !default;
  
 $percentages: (
   0, 5, 10, 20, 25, 30, 40, 50, 60, 70, 75, 80, 90, 95, 100
-);
+) !default;
