--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -67,3 +67,23 @@ a {
     color: var(--link-hover-color);
   }
 }
+
+.sr-only {
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  padding: 0 !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  clip: rect(0, 0, 0, 0) !important;
+  white-space: nowrap !important;
+  border: 0 !important;
+}
+
+.focus\:outline-none:focus {
+  outline: none;
+}
+
+.focus\:ring:focus {
+  box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.5);
+}
