--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -1,6 +1,6 @@
 // _navbar.scss
 
-@use '../utilities/responsive' as Responsive;
+@use '../utilities/media-queries' as Responsive;
 @use '../utilities/shadows' as *;
 @use '../utilities/variables' as *;
 @use '../layouts/container' as Container;
